# ImgurScraper

./: .gitignore  README.md  workspace.code-workspace
chrome_extension/: contentScript.css  contentScript.js  contentScript_old.js  manifest.json
rust_server_api/: Cargo.toml  filter_word_list.txt
rust_server_api/src/: filter.rs  imgur_interface.rs  main.rs  mongo_db_interface.rs
