[package]
name = "scraper_app"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# leptonica-sys = "0.3.3"
dotenv="0.15.0"
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "0.2.6", features = ["full"] }
mini-redis = "0.3"
serde = "1.0.117"
serde_json = "1.0"
regex = "1.4.2"
image = "0.23.1"
mongodb = "1.1.1"
leptess = "0.9.0"

[dependencies.img_hash]
version = "3.0"