[package]
name = "scraper_app"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
leptonica-sys = "0.3.3"
dotenv="0.15.0"
mini-redis = "0.3"
regex = "1.4.2"
image = "0.23.12"
leptess = "0.9.0"
clap = "2.33"
anyhow = "1.0.34"
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "0.2.6", features = ["full"] }
serde = "1.0.117"
serde_json = "1.0"
mongodb = "1.1.1"
warp = "0.2.5"
hyper = "0.13.6"
hyper-tls = "0.4.1"
http = "0.2"
bytes = "0.5"
futures = "0.3"
dirs = "2.0.2"
url = "2.1.1"
async-std = "1.7.0"

# [dependencies.img_hash]
# version = "3.1.0"